# PorechopX

./: .gitignore  README.md  pyproject.toml
porechopx/: main.py  misc.py  parser.py  porechop.py
tests/: test.sh
