[tool.poetry]
name = "porechopx"
version = "0.1.0"
description = ""
authors = ["kevinzjy <kevinzjy1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
parasail = "^1.3.4"
tqdm = "^4.66.5"
needletail = { file = "vendor/needletail-0.5.1-cp312-cp312-manylinux_2_28_x86_64.whl" }

[tool.poetry.scripts]
porechopx = 'porechopx.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
